--- a/requirements.txt
+++ b/requirements.txt
@@ -1,13 +1,55 @@
-numpy
-pandas
-scikit-learn
-joblib
-kagglehub
-notebook
-flask
-gunicorn
-librosa
-soundfile
-Werkzeug
-seaborn
-matplotlib
+audioop-lts==0.2.2
+audioread==3.1.0
+blinker==1.9.0
+certifi==2026.1.4
+cffi==2.0.0
+charset-normalizer==3.4.4
+click==8.3.1
+contourpy==1.3.3
+cycler==0.12.1
+decorator==5.2.1
+dotenv==0.9.9
+Flask==3.1.2
+fonttools==4.61.1
+idna==3.11
+imbalanced-learn==0.14.1
+itsdangerous==2.2.0
+Jinja2==3.1.6
+joblib==1.5.3
+kiwisolver==1.4.9
+lazy_loader==0.4
+librosa==0.11.0
+lightgbm==4.6.0
+llvmlite==0.46.0
+MarkupSafe==3.0.3
+matplotlib==3.10.8
+msgpack==1.1.2
+numba==0.63.1
+numpy==2.3.5
+packaging==25.0
+pandas==2.3.3
+pillow==12.1.0
+platformdirs==4.5.1
+pooch==1.8.2
+pycparser==2.23
+pyparsing==3.3.1
+python-dateutil==2.9.0.post0
+python-dotenv==1.2.1
+pytz==2025.2
+requests==2.32.5
+scikit-learn==1.8.0
+scipy==1.17.0
+seaborn==0.13.2
+six==1.17.0
+sklearn-compat==0.1.5
+soundfile==0.13.1
+soxr==1.0.0
+standard-aifc==3.13.0
+standard-chunk==3.13.0
+standard-sunau==3.13.0
+threadpoolctl==3.6.0
+typing_extensions==4.15.0
+tzdata==2025.3
+urllib3==2.6.3
+Werkzeug==3.1.5
+xgboost==3.1.3
